[UI] Fix text display css styles
In mobile fullscreen mode, the captions font size was relatively big,
and the captions overflowing out of video window got hidden.
This was because:
1. In full screen mode the font size was set 4.4% of window height.
Changing it to min(4.4% window height, 4.4% window width) should work
for both portrait and landscape screen.
2. css 'white-space:pre' hides the overflown texts. Should be
'pre-line'.

Closes #2051.

Tested with: Demo app, Angel One, Pixel2 in chrome simulator.
1. Load the video, turn on captions, enter full screen mode.
2. Rotate the screen to see the captions in both landscape and portrait
mode.
Before: The captions font is large, and the screen hides overflown
captions.
Now: The captions font is normal, and if the captions are long, it is
shown in a few lines.

--- a/ui/less/containers.less
+++ b/ui/less/containers.less
@@ -48,8 +48,9 @@
 
   .shaka-text-container {
     /* In fullscreen mode, the text displayer's font size should be relative to
-     * the window height instead of a fixed size. */
-    font-size: 4.4vh;
+     * the either window height or width (whichever is smaller), instead of a
+     * fixed size. */
+    font-size: 4.4vmin;
   }
 }
 .shaka-video-container:fullscreen { .fullscreen-container(); }
